testsuite/poke.pkl/array-bound-diag-1.pk
/* { dg-do compile } */

type La = int[
          "foo" /* { dg-error "invalid array bound\n.*expected integral or offset, got string" } */
          ];
